add auth into gateway

--- a/Authentication/Authentication/appsettings.Debug.json
+++ b/Authentication/Authentication/appsettings.Debug.json
@@ -7,5 +7,10 @@
   },
   "ApiOptions": {
     "DataAccess": "http://localhost:8010"
+  },
+  "JwtConfiguration": {
+    "ISSUER": "LangBuddy",
+    "AUDIENCE": "All",
+    "KEY": "SECRET_KEY_123456"
   }
 }
