--- a/DataAccess/DataAccess/appsettings.Debug.json
+++ b/DataAccess/DataAccess/appsettings.Debug.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=LangBuddyDataDebug;Username=postgres;Password=123456"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=LangBuddy.Accounts.Debug;Username=postgres;Password=123456"
   }
 }
