--- a/Authentication/Authentication/appsettings.Development.json
+++ b/Authentication/Authentication/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ApiOptions": {
+    "DataAccess": "http://langbaddy-data-access"
+  },
+  "JwtConfiguration": {
+    "ISSUER": "LangBuddy",
+    "AUDIENCE": "All",
+    "KEY": "SECRET_KEY_123456"
   }
 }
