--- a/ChatData/Web/appsettings.Debug.json
+++ b/ChatData/Web/appsettings.Debug.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=LangBuddy.Chats.Debug;Username=postgres;Password=123456",
+    "DefaultConnection": "Host=localhost;Port=5432;Database=LangBuddy.Debug;Username=postgres;Password=123456",
     "Redis": "localhost:6379"
   }
 }
