--- a/ChatData/Web/appsettings.Development.json
+++ b/ChatData/Web/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=LangBuddy.Chats.Debug;Username=postgres;Password=123456"
+    "DefaultConnection": "Host=langbaddy-db;Port=5432;Database=LangBuddy.Develop;Username=postgres;Password=123456",
+    "Redis": "langbuddy-cache-data:6379"
   }
 }
