--- a/DataAccess/DataAccess/appsettings.Development.json
+++ b/DataAccess/DataAccess/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=LangBuddyDataDevelop;Username=postgres;Password=123456"
+    "DefaultConnection": "Host=langbaddy-db;Port=5432;Database=LangBuddy.Develop;Username=postgres;Password=123456"
   }
 }
