--- a/GateWay/Web/appsettings.Debug.json
+++ b/GateWay/Web/appsettings.Debug.json
@@ -6,6 +6,7 @@
     }
   },
   "ApiOptions": {
-    "Authentication": "http://localhost:8002/Authentication"
+    "Authentication": "http://localhost:8002/Authentication",
+    "Chat": "http://localhost:8009/"
   }
 }
