--- a/Authentication/Authentication/appsettings.Development.json
+++ b/Authentication/Authentication/appsettings.Development.json
@@ -12,5 +12,8 @@
     "ISSUER": "LangBuddy",
     "AUDIENCE": "All",
     "KEY": "SECRET_KEY_123456"
+  },
+  "RabbitMqConfig": {
+    "Host": "langbuddy-rabbitmq"
   }
 }
