--- a/GateWay/Web/appsettings.Debug.json
+++ b/GateWay/Web/appsettings.Debug.json
@@ -7,6 +7,7 @@
   },
   "ApiOptions": {
     "Authentication": "http://localhost:8002/Authentication",
-    "Chat": "http://localhost:8009/"
+    "Chat": "http://localhost:8009/",
+    "Accounts": "http://localhost:8010/"
   }
 }
