--- a/GateWay/Web/appsettings.Development.json
+++ b/GateWay/Web/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ApiOptions": {
+    "Authentication": "http://langbaddy-authentication/Authentication",
+    "Chat": "http://langbaddy-chat-data/",
+    "Accounts": "http://langbaddy-data-access/"
   }
 }
